correction mobile view for galery

--- a/src/scss/blocks/about.scss
+++ b/src/scss/blocks/about.scss
@@ -6,10 +6,10 @@
 	justify-content: space-between;
 	align-items: center;
 
-	padding: 0 var(--standart-side-padding);
+	padding: 0 var(--standart-side-padding) 100px var(--standart-side-padding);
 
 	@media (max-width: 900px) {
-		padding: 0 var(--mobile-side-padding);
+		padding: 0px var(--mobile-side-padding) 100px var(--mobile-side-padding);
 	}
 }
 
