--- a/src/scss/blocks/project.scss
+++ b/src/scss/blocks/project.scss
@@ -6,6 +6,10 @@
 
 	&--inner {
 		padding: 70px;
+
+		@media (max-width: 900px) {
+			padding: 30px 10px;
+		}
 	}
 
 	&--double {
@@ -13,6 +17,14 @@
 		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr 1fr;
 		padding: 0 20px;
+
+
+		@media (max-width: 900px) {
+			grid-template-columns: 1fr;
+			grid-template-rows: repeat(3, min-content);
+			grid-row-gap: 10px;
+			padding: 0 20px;
+		}
 	}
 }
 
